--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: Your Awesome Site
+title: Rotary Club of Panama City Beach
 email: your-email@domain.com
 description: > # "Write an awesome description for your new site here. 
   You can edit this line in _config.yml. It will appear in your document 
@@ -24,8 +24,6 @@ permalink: pretty
 
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
-  - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
-  - title: linkedin
-    url: 
+    url: https://twitter.com/RotaryClubPcb
+  - title: facebook
+    url: https://www.facebook.com/RotaryPCB
