made logo user-configurable

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 
 url: http://yoursite.com
 title: Rotary Club of Panama City Beach
+logo: logo.png
 email: your-email@domain.com
 description: > # "Write an awesome description for your new site here. 
   You can edit this line in _config.yml. It will appear in your document 
